# sd-inhibit-bridge

./: README.md  c2xcompat.h  extensions.h  meson.build  meson.options
src/: htable.c  htable.h  inhibitman.c  inhibitman.h  main.c  meson.build  version.map
src/systemd/: meson.build  sd-inhibit-bridge.service.in
