option(
  'docdir',
  type: 'string',
  description: 'documentation directory',
)
option(
  'sd-bus-provider',
  type: 'combo',
  choices: [
    'auto',
    'libsystemd',
    'libelogind',
  ],
  value: 'auto',
  description: 'Provider of the sd-bus library',
)
option(
  'systemd-user-service',
  type: 'feature',
  value: 'disabled',
  description: 'Install systemd user service',
)
